build: shrink runtime image for Blitz registry